feat: Establish core application structure, user flows, and initial UI components including onboarding, authentication, and main diary features.

--- a/app.json
+++ b/app.json
@@ -19,7 +19,8 @@
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.yagnikl3.couplediary"
     },
     "web": {
       "output": "static",
@@ -43,6 +44,13 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
-    }
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "ecb896a5-e89b-4e6a-9783-3a3230985d53"
+      }
+    },
+    "owner": "yagnik-l3"
   }
 }
