feat: Implement initial application structure, core screens, and shared UI components.

--- a/app.json
+++ b/app.json
@@ -39,7 +39,8 @@
             "backgroundColor": "#0B0D2E"
           }
         }
-      ]
+      ],
+      "@react-native-community/datetimepicker"
     ],
     "experiments": {
       "typedRoutes": true,
